2007-05-18 Alexander Malysh <amalysh at kannel.org>
   * gwlib/list.c: use macro instead of direct access.

2007-05-18  Stipe Tolj  <stolj at kannel.org>
   * gwlib/charset.c: imunize charset_[gsm|utf8]_to_[utf8|gsm]() functions 
     for NULL argument. Currently these would panic due to octstr_append() 
     called at the end with a NULL argument. NLC.
   
2007-05-15 Alexander Malysh <amalysh at kannel.org>
   * gwlib/list.[ch]: added new function gwlist_timed_consume that works
     as gwlist_consume except that we are able to specify timeout.

2007-04-24  Andreas Fink <andreas at fink.org>
   * gwlib/gwlib.c: call log_init before http_init and socket_init so error
     messages from those init calls actually are able to appear on the screen
     instead of crashing bearerbox at start. Reported under MacOS X by
     Alejandro Guerrieri. Only happened if hostname was not set.
     ERROR: Can't find out official hostname for this host, using `xyz' instead.
     was being sent to a logfile not open... -> crash

2007-04-20  Stipe Tolj  <stolj at kannel.org>
   * aclocal.m4: fixed typo and updated email references. NLC.
   * Makefile.in: adding creation of symlink for 'gw-config' if we have used
     '--with-suffix' while configure, otherwise gw-config is also appended
     with suffix string and it does not comply with external components
     depending to find a 'gw-config' in the PATH and use the cflags and libs
     information for their own builds against Kannel libs. This is safe now
     for both, w/o suffix.

2007-04-18 Alexander Malysh <amalysh at kannel.org>
   * doc/userguide/userguide.xml, gw/bb_boxc.c, gw/bb_smscconn.c, gw/bb_smscconn_cb.h,
     gw/bearerbox.c, gw/bearerbox.h, gwlib/cfg.def: applied patch that implements
     outgoing queue (MT) limit.

2007-04-18 Alexander Malysh <amalysh at kannel.org>
   * gwlib/mime.c: applied patch should help take care of issues where the
     Content-ID for the start element is enclosed in '<' '>'.