@@ -30,4 +30,4 @@ D/wmlscript////
 /configure.in/1.173/Wed Apr 11 17:06:10 2007//
 /Makefile.in/1.80/Sun Apr 22 11:22:43 2007//
 /aclocal.m4/1.10/Sun Apr 22 11:22:43 2007//
-/ChangeLog/1.2890/Fri May 18 12:34:27 2007//
+/ChangeLog/1.2892/Fri Jun  1 11:18:36 2007//
