@@ -20,11 +20,11 @@
 /smsc_sema.c/1.8/Sun Jan 14 19:21:37 2007//
 /smsc_sema.h/1.6/Sun Jan 14 19:21:37 2007//
 /smsc_smasi.c/1.24/Sun Jan 14 19:21:36 2007//
-/smsc_smpp.c/1.100/Tue Jan 30 23:54:37 2007//
 /smsc_soap.c/1.18/Sun Jan 14 19:21:37 2007//
 /smsc_wrapper.c/1.9/Sun Jan 14 19:21:36 2007//
-/smsc_at.c/1.34/Mon Feb 26 19:41:17 2007//
 /emimsg.c/1.6/Tue Feb 27 17:43:20 2007//
 /emimsg.h/1.6/Tue Feb 27 17:43:20 2007//
 /smsc_http.c/1.54/Wed Apr 18 08:09:09 2007//
+/smsc_at.c/1.35/Fri Jun  1 11:17:09 2007//
+/smsc_smpp.c/1.101/Thu May 31 08:29:57 2007//
 D
